--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node start.js",
     "dev": "node start.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "check-env": "node scripts/check-env.js",
     "services": "node scripts/service-manager.js",
     "services:start": "node scripts/service-manager.js start",
@@ -39,6 +42,23 @@
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
-    "concurrently": "^9.2.1"
+    "@types/jest": "^29.5.12",
+    "concurrently": "^9.2.1",
+    "jest": "^29.7.0",
+    "whatwg-fetch": "^3.6.20"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/tests/**/*.test.js",
+      "**/tests/**/*.spec.js"
+    ],
+    "collectCoverageFrom": [
+      "backend/src/**/*.js",
+      "!backend/src/**/*.test.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ]
   }
 }
